// Command to generate grpc  
// $ protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative .\auth.proto

syntax = "proto3";

package auth;

option go_package = "github.com/pseudoincorrect/Bariot/user/rpc/auth";

service Auth {
  rpc GetAdminToken(GetAdminTokenRequest) returns (GetAdminTokenResponse) {}
  rpc GetUserToken(GetUserTokenRequest) returns (GetUserTokenResponse) {}
  rpc GetThingToken(GetThingTokenRequest) returns (GetThingTokenResponse) {}
  rpc GetClaimsToken(GetClaimsTokenRequest) returns (GetClaimsTokenResponse) {}
}

message GetAdminTokenRequest {
}

message GetAdminTokenResponse{
  string jwt = 1;
}

message GetUserTokenRequest {
  string userId = 1;
}

message GetUserTokenResponse{
  string jwt = 1;
}

message GetThingTokenRequest {
  string thingId = 1;
}

message GetThingTokenResponse{
  string jwt = 1;
}

message GetClaimsTokenRequest {
  string jwt = 1;
}

message GetClaimsTokenResponse {
  string Role = 1;
  string Subject = 2;
  int64 IssuedAt = 3;
  int64 ExpiresAt = 4;
  string Issuer = 5;
}
